syntax = "proto3";

option java_multiple_files = true;
package ratingservice.grpcgateway;
import "google/protobuf/wrappers.proto";

message RateRequest {
  int64 employeeId = 1;
  int64 courseId = 2;
  int32 stars = 3;
}

message RateResponse {
  int64 id = 1;
}

message RatingAverage {
  int64 courseId = 1;
  double stars = 2;
  int32 numberOfRates = 3;
}

service RatingService {
  rpc rate(RateRequest) returns (RateResponse);
  rpc findAverageOfCourse(google.protobuf.Int64Value) returns (RatingAverage);
}



